--- a/roles/postgres/tasks/main.yml
+++ b/roles/postgres/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Installer PostgreSQL
-  apt: 
+  ansible.builtin.package: 
     name: 
       - postgresql
       - python3-psycopg2
@@ -14,23 +14,39 @@
     state: started
     enabled: true
 
+
 - name: Créer l'utilisateur PostgreSQL "gvm"
   community.postgresql.postgresql_user:
-    name: {postgresql_user}
+    name: "{postgresql_user}"
     password: "Venus123@"
     role_attr_flags: "NOSUPERUSER"
     state: present
-  become: true
+  become: false
   become_user: postgres
 
-- name: Créer la base de données "{{ postgresql_db }}"
-  become_user: postgres
-  postgresql_db:
+- name: Create a new database with name "{{ postgresql_db }}" 
+  community.postgresql.postgresql_db:
     name: "{{ postgresql_db }}"
-    owner: "{{ postgresql_user }}"
+    comment: My test DB
+  become: false
+  become_user: postgres
+
+
+- name: Vérifier si le rôle gvm existe, sinon le créer
+  postgresql_query:
+    db: "{{ postgresql_db }}"
+    query: >
+      DO $$
+      BEGIN
+        IF NOT EXISTS (SELECT FROM pg_roles WHERE rolname = 'gvm') THEN
+          CREATE ROLE gvm LOGIN PASSWORD 'motdepasse' NOSUPERUSER;
+        END IF;
+      END
+      $$;
+  become: false
+  become_user: postgres
 
 - name: Créer le rôle dba avec superuser et sans héritage s'il n'existe pas
-  become_user: postgres
   postgresql_query:
     db: "{{ postgresql_db }}"
     query: >
@@ -41,9 +57,20 @@
         END IF;
       END
       $$;
+  become: false
+  become_user: postgres
+
+- name: Accorder le rôle dba à l'utilisateur "gvm"
+  postgresql_query:
+    db: "{{ postgresql_db }}"
+    query: "GRANT dba TO gvm;"
+  become: false
+  become_user: postgres
+
 
 - name: Accorder le rôle dba à l'utilisateur "{{ postgresql_user }}"
-  become_user: postgres
   postgresql_query:
     db: "{{ postgresql_db }}"
     query: "GRANT dba TO {{ postgresql_user }};"
+  become: false
+  become_user: postgres
