2eme commit - Version 0.2 du role postgres

--- a/roles/postgres/handlers/main.yml
+++ b/roles/postgres/handlers/main.yml
@@ -1,3 +1,5 @@
-#SPDX-License-Identifier: MIT-0
----
-# handlers file for postgres
+- name: Redémarrer PostgreSQL 16
+  ansible.builtin.systemd:
+    name: postgresql@16-main.service
+    state: restarted
+    enabled: true
