--- a/roles/ospd-openvas/tasks/main.yml
+++ b/roles/ospd-openvas/tasks/main.yml
@@ -36,7 +36,7 @@
   changed_when: "'Successfully installed' in ospd_openvas_pip_install.stdout or ospd_openvas_pip_install.rc == 0"
   failed_when: ospd_openvas_pip_install.rc != 0
 
-- name: "[ospd-openvas] Copier les fichiers avec rsync vers /"
-  ansible.builtin.command: >
-    rsync -a {{ ospd_openvas_install_dir }}/ /
+- name: Copier les fichiers du répertoire vers la racine
+  ansible.builtin.shell:
+    cmd: "sudo cp -rv {{ install_dir }}/ospd-openvas/* /"
   become: true
